# playground2

./: .gitignore
aspnet/TodoApi/: Dockerfile  Program.cs  TodoApi.sln  readme.txt
aspnet/TodoApi/Controllers/: TodoItemsController.cs
aspnet/TodoApi/Properties/: launchSettings.json
aspnet/aspNetOnLambdaWithAuto/src/aspNetOnLambdaWithAuto/: .gitignore  LambdaEntryPoint.cs  LocalEntryPoint.cs  Readme.md  Startup.cs  aspNetOnLambdaWithAuto.csproj  aspNetOnLambdaWithAuto.sln  aws-lambda-tools-defaults.json  serverless.template
aspnet/aspNetOnLambdaWithAuto/src/aspNetOnLambdaWithAuto/Controllers/: ValuesController.cs  awsSvcController.cs
aspnet/aspNetOnLambdaWithAuto/test/aspNetOnLambdaWithAuto.Tests/: ValuesControllerTests.cs  aspNetOnLambdaWithAuto.Tests.csproj
aspnet/aspnetOnLambda/: .gitignore  aspnetOnLambda.sln
aspnet/aspnetOnLambda/src/aspnetOnLambda/: LambdaEntryPoint.cs  LocalEntryPoint.cs  Readme.md  Startup.cs  aspnetOnLambda.csproj  aws-lambda-tools-defaults.json  serverless.template
aspnet/aspnetOnLambda/src/aspnetOnLambda/Controllers/: AwsCallController.cs  ValuesController.cs
aspnet/aspnetOnLambda/test/aspnetOnLambda.Tests/: ValuesControllerTests.cs  aspnetOnLambda.Tests.csproj
cppTest/: c11.cpp
docker-otel-collectors/jaeger/: readme.md
docker-otel-collectors/otel-collector/: collector-config.yaml  readme.md
docker-otel-collectors/zipkin/: readme.md
dotnet/dotnet-otel-console/: Program.cs  dotnet-otel-console.csproj  dotnet-otel-console.sln
dotnet/dotnet-otel-console/Properties/: launchSettings.json
dotnet/dotnet-otel-simple/: Program.cs  dice.cs  diceController.cs  dotnet-otel-simple.csproj  dotnet-otel-simple.sln  instrumentation.cs
dotnet/dotnet-otel-simple/Properties/: launchSettings.json
golang/proj1/: go.mod  helloworld.go
java/javaProj01/: .gitignore  settings.gradle
java/javaProj01/app/: build.gradle
java/javaProj01/app/src/main/java/javaproj01/: App.java  Cat.java  Dog.java  IAnimal.java  stub.java
java/javaProj01/app/src/test/java/javaproj01/: AppTest.java
java/proj02/: .gitignore  settings.gradle
java/proj02/app/: build.gradle
java/proj02/app/src/main/java/proj02/: App.java  JavaTestMain.java
java/proj02/app/src/test/java/proj02/: AppTest.java
java/proj02/otelSdkEnabler/: build.gradle
java/proj02/otelSdkEnabler/src/main/java/xTel/: OTelEnabler.java
nodejs/oteljs-test01/: index.js  instrumentation.js  package-lock.json  package.json  trace2.js  tracing.js
otel-cpp-starter/: .gitignore  readme.md  readme.txt
otel-cpp-starter/otel-cpp-old/lib/cmake/opentelemetry-cpp/: opentelemetry-cpp-target.cmake
otel-cpp-starter/otel-cpp/lib/cmake/opentelemetry-cpp/: opentelemetry-cpp-config-version.cmake  opentelemetry-cpp-config.cmake  opentelemetry-cpp-target-debug.cmake  opentelemetry-cpp-target-noconfig.cmake  opentelemetry-cpp-target.cmake
otel-cpp-starter/otel-cpp/share/pkgconfig/: nlohmann_json.pc
otel-cpp-starter/roll-dice/: CMakeLists.txt  DiceServer.cpp  DiceServer.h  main.cpp  xtrace.cpp  xtrace.h
